@@ -56,6 +56,7 @@ dnl
 #include <fame.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include <string.h>
 
 int 
 main ()
