@@ -1,3 +1,9 @@
+2004-05-18  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>
+
+	* m4/a52.m4 : fix compilation with -Wall -Werror
+	* m4/libfame.m4 : idem
+	* m4/libmikmod.m4 : idem
+
 2004-05-17  Benjamin Otte  <otte@gnome.org>
 
 	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_process_comment):
